--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -91,6 +91,7 @@ p, span {
 .container .container-wrapper .main_content .showcase .showcase_top .showcase_main {
   width: 73%;
   height: 100%;
+  background-color: gold;
   position: relative;
 }
 
@@ -165,8 +166,226 @@ p, span {
 }
 
 .container .container-wrapper .right_bar {
-  width: 27%;
-  height: 0;
-  background-color: firebrick;
+  width: 25.5%;
+  height: auto;
+  padding: 0px 10px;
+  border-left: 1px solid #d6d6d6;
+}
+
+.container .container-wrapper .right_bar .right_bar_opinion .right_opionion_bar {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .container-wrapper .right_bar .right_bar_opinion .right_opionion_bar h3 {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.container .container-wrapper .right_bar .right_bar_opinion .right_bar_opinion_content p {
+  font-family: 'Postoni';
+  font-weight: lighter;
+  cursor: pointer;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_bar {
+  font-family: 'Roboto';
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_bar h3 {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases, .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths {
+  font-family: 'Roboto';
+  font-weight: 500;
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 17px;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases:first-child, .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths:first-child {
+  color: purple;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine h3 {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 14px;
+  color: purple;
+  margin-bottom: 10px;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine small {
+  font-family: 'Roboto';
+  font-size: 10px;
+  font-style: italic;
+  color: #666666;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine .find_shot {
+  font-size: 14px;
+  margin-top: 15px;
+  font-weight: bold;
+  color: purple;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine .vaccine_toll {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine .vaccine_toll .figure {
+  width: 10%;
+  font-size: 15px;
+  color: purple;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine .vaccine_toll .toll_color_code {
+  width: 87%;
+  height: 17px;
+  background-color: #c2c2c2;
+  margin-left: 8px;
+  position: relative;
+}
+
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine .vaccine_toll .toll_color_code .ovrly_cnt {
+  position: absolute;
+  height: inherit;
+  width: 50%;
+  background-color: purple;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe h3 {
+  font-size: 17px;
+  font-family: 'Roboto';
+  font-weight: bold;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe .subscribe_intro {
+  font-weight: bold;
+  text-align: center;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe .right_bar_subscribe_input {
+  width: 70%;
+  height: 40px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 15px;
+  border-radius: 4px;
+  border: 1px solid #d6d6d6;
+  padding-left: 10px;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe .right_bar_subscribe_input:focus {
+  outline: none;
+}
+
+.container .container-wrapper .right_bar .right_bar_subscribe .right_bar_subscribe_btn {
+  width: 50%;
+  height: 35px;
+  margin-top: 10px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  color: white;
+  background-color: purple;
+  border-radius: 4px;
+  border: none;
+}
+
+.container .container-wrapper .right_bar .right_bar_weather .weather_br_location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .container-wrapper .right_bar .right_bar_weather .weather_br_location h3 {
+  font-family: 'Roboto';
+  font-size: 17px;
+}
+
+.container .container-wrapper .right_bar .right_bar_weather .weather_br_location span {
+  font-weight: bold;
+}
+
+.container .container-wrapper .right_bar .right_vaccine_finder h3 {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.container .container-wrapper .right_bar .right_vaccine_finder p {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.container .container-wrapper .right_bar .right_vaccine_finder .zipcode_field {
+  width: 70%;
+  height: 40px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 15px;
+  border-radius: 4px;
+  border: 1px solid #d6d6d6;
+  padding-left: 10px;
+}
+
+.container .container-wrapper .right_bar .right_vaccine_finder .zipcode_field:focus {
+  outline: none;
+}
+
+.container .container-wrapper .right_bar .right_vaccine_finder button {
+  width: 50%;
+  height: 35px;
+  margin-top: 10px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  color: white;
+  background-color: purple;
+  border-radius: 4px;
+  border: none;
 }
 /*# sourceMappingURL=Home.css.map */
