--- a/src/Components/Top Stories/TopStories.scss
+++ b/src/Components/Top Stories/TopStories.scss
@@ -57,11 +57,35 @@
                     }
                 }
             }
+
+            .ads_left {
+                position: relative;
+                margin-top: 35px;
+                width: 100%;
+                height: 70vh;
+                background: url('../../Assets/Ads/ads5.gif');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                cursor: pointer;
+
+                .ads_sign {
+                    position: absolute;
+                    width: 70px;
+                    height: 70px;
+                    background: url('../../Assets/Ads/ads_blinker.gif');
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    top: 0;
+                    left: 0;
+                }
+            }
         }
 
         .topstor_main_content {
             width: 73%;
-            height: 50vh;
+            height: auto;
             // background-color: salmon;
 
             .topstor_section_1 {
@@ -173,7 +197,7 @@
 
             .topstor_section_2 {
                 width: 100%;
-                height: 100vh;
+                height: auto;
                 // background-color: lightcoral;
                 display: flex;
                 justify-content: space-between;
