--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -281,7 +281,7 @@ p, span {
                 }
 
                 .right_bar_subscribe_input {
-                    width: 70%;
+                    width: 100%;
                     height: 40px;
                     align-self: center;
                     margin-top: 15px;
@@ -334,7 +334,7 @@ p, span {
                 }
 
                 .zipcode_field {
-                    width: 70%;
+                    width: 100%;
                     height: 40px;
                     align-self: center;
                     margin-top: 15px;
@@ -354,6 +354,30 @@ p, span {
                     background-color: purple;
                     border-radius: 4px;
                     border: none;
+                }
+            }
+
+            .right_ads_cnt {
+                width: 100%;
+                height: 60vh;
+                margin-top: 30px;
+                background: url('../../Assets/Ads/ads4.gif');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                position: relative;
+                cursor: pointer;
+
+                .ads_sign {
+                    position: absolute;
+                    width: 70px;
+                    height: 70px;
+                    background: url('../../Assets/Ads/ads_blinker.gif');
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    top: 0;
+                    left: 0;
                 }
             }
         }
