--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,11 +5,12 @@
 }
 
 h1 {
-  font-family: 'Postoni';
+  font-family: "Postoni";
 }
 
-p, span {
-  font-family: 'Roboto';
+p,
+span {
+  font-family: "Roboto";
 }
 
 .router_link {
@@ -120,7 +121,7 @@ p, span {
 
 .container .container-wrapper .main_content .showcase .showcase_top .showcase_main .gradient .show_main_title {
   color: white;
-  font-family: 'Postoni';
+  font-family: "Postoni";
   padding: 0px 25px;
   text-align: justify;
 }
@@ -143,7 +144,9 @@ p, span {
   margin-top: 10px;
 }
 
-.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3 {
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3 {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -154,13 +157,19 @@ p, span {
   position: relative;
 }
 
-.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1 p, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2 p, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3 p {
-  font-family: 'Postoni';
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1 p,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2 p,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3 p {
+  font-family: "Postoni";
   padding: 20px 0px;
   padding-left: 0px;
 }
 
-.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1:last-child, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1:nth-child(2), .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2:last-child, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2:nth-child(2), .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3:last-child, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3:nth-child(2) {
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1:last-child, .container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_1:nth-child(2),
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2:last-child,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_2:nth-child(2),
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3:last-child,
+.container .container-wrapper .main_content .showcase .showcase_bottom .btm_news_3:nth-child(2) {
   border-left: #d6d6d6 1px solid;
   padding-left: 10px;
 }
@@ -183,19 +192,19 @@ p, span {
 }
 
 .container .container-wrapper .right_bar .right_bar_opinion .right_opionion_bar h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 17px;
 }
 
 .container .container-wrapper .right_bar .right_bar_opinion .right_bar_opinion_content p {
-  font-family: 'Postoni';
+  font-family: "Postoni";
   font-weight: lighter;
   cursor: pointer;
 }
 
 .container .container-wrapper .right_bar .covid_tracker .covid_tracker_bar {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -205,13 +214,14 @@ p, span {
 }
 
 .container .container-wrapper .right_bar .covid_tracker .covid_tracker_bar h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 17px;
 }
 
-.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases, .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths {
-  font-family: 'Roboto';
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases,
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths {
+  font-family: "Roboto";
   font-weight: 500;
   width: 70%;
   display: -webkit-box;
@@ -223,12 +233,13 @@ p, span {
   margin-bottom: 17px;
 }
 
-.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases:first-child, .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths:first-child {
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_cases:first-child,
+.container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_deaths:first-child {
   color: purple;
 }
 
 .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 14px;
   color: purple;
@@ -236,7 +247,7 @@ p, span {
 }
 
 .container .container-wrapper .right_bar .covid_tracker .covid_tracker_content .covid_tracker_vaccine small {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 10px;
   font-style: italic;
   color: #666666;
@@ -292,7 +303,7 @@ p, span {
 
 .container .container-wrapper .right_bar .right_bar_subscribe h3 {
   font-size: 17px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
 }
 
@@ -340,7 +351,7 @@ p, span {
 }
 
 .container .container-wrapper .right_bar .right_bar_weather .weather_br_location h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 17px;
 }
 
@@ -349,7 +360,7 @@ p, span {
 }
 
 .container .container-wrapper .right_bar .right_vaccine_finder h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 17px;
 }
